[package]
name = "binblobfile"
version = "0.1.0"
authors = ["Vincenzo Ciaccio <vincenzo.ciaccio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde =  { version = "1.0", features = ["derive"] }